--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.3",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
 		"babel-preset-react-native": "4.0.0",
 		"eslint-config-rallycoding": "^3.2.0",
 		"jest": "22.0.3",
