--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"react-native": "0.44.0"
 	},
 	"devDependencies": {
+		"axios": "^0.17.1",
 		"babel-jest": "22.0.3",
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
